<resources>
    <string name="app_name">Iris</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="write_a_message">Write a message...</string>
    <string name="attach_photo">Attach photo</string>
    <string name="tv_description">trying to look hipster</string>
    <string name="likes_hint">0</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_feed">Back to feed</string>
    <string name="view_all_comments">View all comments</string>
    <string name="comment_content">Write a comment...</string>
    <string name="comment">Comment</string>
    <string name="search">search</string>
    <string name="transportation">Transportation</string>
    <string name="price">Price</string>
    <string name="enter_location">Enter location (optional)</string>
    <string name="location">Location</string>
    <string name="enter_keyword">Enter keyword (optional)</string>
    <string name="keyword">Keyword</string>
    <string name="category">Category</string>
    <string name="default_location">Default Location</string>
    <string-array name="category_array">
        <item>Homeless shelters</item>
        <item>Food banks</item>
        <item>Pharmacy</item>
        <item>Counseling and Mental Health</item>
        <item>Hospitals</item>
        <item>Hotels</item>
        <item>Community Centers</item>
        <item>Police departments</item>
    </string-array>
    <string-array name="price_array">
        <item>Cheap</item>
        <item>Medium</item>
        <item>Expensive</item>
    </string-array>
    <string-array name="transportation_array">
        <item>Walking</item>
        <item>Bicycle</item>
        <item>Automobile</item>
        <item>Transit</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>